Update favicon to use fav.png

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/flex.png" />
+    <link rel="icon" type="image/png" href="/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FlexCredit - Onchain Bank, Credit & Treasury by FC Protocol</title>
     <meta name="description" content="FlexCredit turns your USDC income into an onchain bank account, under-collateralized credit line, and automated treasury layer — built for freelancers, teams, and onchain-native users." />
