changed branding to monaris

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="src/assets/fav.png" />
+    <link rel="icon" type="image/png" href="/mon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FlexCredit - Onchain Bank, Credit & Treasury by FC Protocol</title>
-    <meta name="description" content="FlexCredit turns your USDC income into an onchain bank account, under-collateralized credit line, and automated treasury layer — built for freelancers, teams, and onchain-native users." />
-    <meta name="author" content="FC Protocol" />
+    <title>Monaris - Onchain Accounts, Credit & Treasury</title>
+    <meta name="description" content="Monaris turns your USDC income into a unified onchain account, income-backed credit line, and automated treasury layer for modern teams and onchain-native operators." />
+    <meta name="author" content="Monaris" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700;800&family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="FlexCredit - Onchain Bank, Credit & Treasury" />
-    <meta property="og:description" content="Onchain bank accounts and income-backed credit for stablecoin users." />
+    <meta property="og:title" content="Monaris - Onchain Accounts, Credit & Treasury" />
+    <meta property="og:description" content="Onchain accounts and income-backed credit with automated treasury and protection." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
