removed builder too section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/mon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Monaris - Onchain Accounts, Credit & Treasury</title>
+    <title>Monaris</title>
     <meta name="description" content="Monaris turns your USDC income into a unified onchain account, income-backed credit line, and automated treasury layer for modern teams and onchain-native operators." />
     <meta name="author" content="Monaris" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
